[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Theme/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Obstacles/EnergyShop/ShopMenu.gd" type="Script" id=3]

[node name="Control" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 250
custom_constants/margin_top = 100
custom_constants/margin_left = 250
custom_constants/margin_bottom = 275
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 250.0
margin_top = 100.0
margin_right = 1670.0
margin_bottom = 847.0
color = Color( 0.6, 0.6, 0.6, 0.282353 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 250.0
margin_top = 100.0
margin_right = 1670.0
margin_bottom = 847.0

[node name="CloseButton" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1420.0
margin_bottom = 77.0
custom_constants/margin_top = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CloseButton"]
margin_top = 40.0
margin_right = 1420.0
margin_bottom = 77.0
custom_constants/separation = 60
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer"]
margin_right = 310.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 1

[node name="Button" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 130.0
margin_right = 180.0
margin_bottom = 37.0
size_flags_vertical = 0
text = "Exit"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer"]
margin_left = 370.0
margin_right = 680.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer/HBoxContainer3"]
margin_left = 83.0
margin_right = 226.0
margin_bottom = 37.0
text = "         Cost"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer"]
margin_left = 740.0
margin_right = 1050.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CloseButton/HBoxContainer"]
margin_left = 1110.0
margin_right = 1420.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 1420.0
margin_bottom = 697.0
custom_constants/margin_top = 40
custom_constants/margin_left = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 60.0
margin_top = 40.0
margin_right = 1420.0
margin_bottom = 616.0

[node name="ButtonHolder" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1360.0
margin_bottom = 545.0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder"]
margin_right = 358.0
margin_bottom = 545.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons"]
margin_right = 358.0
margin_bottom = 545.0
size_flags_horizontal = 6
custom_constants/separation = 90
alignment = 1

[node name="GemMult" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons" instance=ExtResource( 1 )]
margin_right = 358.0
margin_bottom = 37.0
size_flags_horizontal = 1
text = "Upgrade Gem Multiplier"

[node name="SpeedUp" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons" instance=ExtResource( 1 )]
margin_top = 127.0
margin_right = 358.0
margin_bottom = 164.0
size_flags_horizontal = 3
text = "Upgrade Player Speed"

[node name="Blast" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons" instance=ExtResource( 1 )]
margin_top = 254.0
margin_right = 358.0
margin_bottom = 291.0
size_flags_horizontal = 3
text = "Upgrade Blast Radius"

[node name="Map" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons" instance=ExtResource( 1 )]
margin_top = 381.0
margin_right = 358.0
margin_bottom = 418.0
size_flags_horizontal = 3
text = "Upgrade Map Size"

[node name="GemsSpawned" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons" instance=ExtResource( 1 )]
margin_top = 508.0
margin_right = 358.0
margin_bottom = 545.0
text = "Upgrade Gems Spawned"

[node name="Cost" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder"]
margin_left = 362.0
margin_right = 679.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 90

[node name="Cost1" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Cost"]
margin_right = 317.0
margin_bottom = 37.0
align = 1

[node name="Cost2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Cost"]
margin_top = 127.0
margin_right = 317.0
margin_bottom = 164.0
align = 1

[node name="Cost3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Cost"]
margin_top = 254.0
margin_right = 317.0
margin_bottom = 291.0
align = 1

[node name="Cost4" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Cost"]
margin_top = 381.0
margin_right = 317.0
margin_bottom = 418.0
align = 1

[node name="Cost5" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Cost"]
margin_top = 508.0
margin_right = 317.0
margin_bottom = 545.0
align = 1

[node name="TextTip" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder"]
margin_left = 683.0
margin_right = 1038.0
margin_bottom = 545.0
size_flags_horizontal = 6
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip"]
margin_right = 355.0
margin_bottom = 545.0
custom_constants/separation = 90

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip/VBoxContainer"]
margin_right = 355.0
margin_bottom = 37.0
text = "Current Gem Multiplier: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip/VBoxContainer"]
margin_top = 127.0
margin_right = 355.0
margin_bottom = 164.0
text = "Current Player Speed: "

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip/VBoxContainer"]
margin_top = 254.0
margin_right = 355.0
margin_bottom = 291.0
text = "Current Blast Radius: "

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip/VBoxContainer"]
margin_top = 381.0
margin_right = 355.0
margin_bottom = 418.0
text = "Current Map Size: "

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/TextTip/VBoxContainer"]
margin_top = 508.0
margin_right = 355.0
margin_bottom = 545.0
text = "Current Gems Spawned:"

[node name="Tier" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder"]
margin_left = 1042.0
margin_right = 1360.0
margin_bottom = 545.0
size_flags_horizontal = 3
custom_constants/separation = 90

[node name="Tier1" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Tier"]
margin_right = 318.0
margin_bottom = 37.0

[node name="Tier2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Tier"]
margin_top = 127.0
margin_right = 318.0
margin_bottom = 164.0

[node name="Tier3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Tier"]
margin_top = 254.0
margin_right = 318.0
margin_bottom = 291.0

[node name="Tier4" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Tier"]
margin_top = 381.0
margin_right = 318.0
margin_bottom = 418.0

[node name="Tier5" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Tier"]
margin_top = 508.0
margin_right = 318.0
margin_bottom = 545.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 549.0
margin_right = 1360.0
margin_bottom = 576.0
custom_constants/margin_bottom = -10

[node name="WinButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource( 1 )]
margin_left = 680.0
margin_right = 680.0
margin_bottom = 37.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton/HBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons/GemMult" to="." method="_on_GemMult_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons/SpeedUp" to="." method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons/Blast" to="." method="_on_Blast_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonHolder/Buttons/Buttons/GemsSpawned" to="." method="_on_GemsSpawned_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/WinButton" to="." method="_on_WinButton_pressed"]
